# piddiy

./: Cargo.toml  LICENSE  README.md
examples/: compute_dt.rs  custom_compute.rs  default_compute.rs  derivative_smoothing.rs  integral_windup.rs  readme.rs  variable_timing.rs
examples/fixed/: Cargo.toml
examples/fixed/src/: lib.rs  main.rs
src/: lib.rs
