# Cargo.toml

[package]
name = "piddiy"
version = "0.1.1"
authors = ["Brendan Sechter <sgeos@hotmail.com>"]
categories = ["algorithms", "embedded", "hardware-support", "no-std", "no-std::no-alloc"]
description = "DIY custom PID controller toolkit."
documentation = "https://docs.rs/piddiy"
edition = "2021"
keywords = ["automation", "control-systems", "embedded", "pid"]
license = "0BSD"
readme = "README.md"
repository = "https://github.com/sgeos/piddiy"

[features]
default = []
std = ["num-traits/std"]

[dependencies]
num-traits = { version = "0.2", default-features = false }
